added open house branch

--- a/public/index/index.html
+++ b/public/index/index.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Kahonk</title>
-        <link rel="stylesheet" href="game.css">
+        <link rel="stylesheet" type="text/css" href="/index/index.css" />
     </head>
     <body>
-        <div id="body">
-            <div id="points-container">
-                <span id="name">idk</span>
-                <span id="number">question 0/0</span>
-                <span id="points">idk</span>
-            </div>
 
+        <div id="body">
+            <div id="title-bar">
+                <span id="name"></span>
+                <span id="title">Kahonk!</span>
+                <span id="points"></span>
+            </div>
             <div id="time_background">
                 <div id="time_slider"></div>
             </div>
@@ -36,6 +36,6 @@
             </div>
         </div>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="game.js"></script>
+        <script src="/index/index.js"></script>
     </body>
 </html>
