--- a/public/join/join.html
+++ b/public/join/join.html
@@ -15,8 +15,7 @@
       </div>
       <div id="name-field-outer">
         <form id="name-field-form" action="../index/index.html" method="get">
-          <span id="name-field-text">name:</span>
-          <input id="name-input-field" type="text" name="name"/>
+          <input id="name-input-field" autocomplete="off" placeholder="name" aaut type="text" name="name"/>
           <input type="submit" id="name-submit" value="play!">
         </div>
       </div>
