--- a/public/index/index.html
+++ b/public/index/index.html
@@ -29,7 +29,7 @@
                 </div>	
             <div id="bottom">
                 <span></span>
-                <span id="streak">0</span>
+                <span id="streak">🔥0</span>
                 <span></span>
                 <span id="place"></span>
                 <span></span>
